--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+web-sys = { version = "0.3.61", features = ["console"] }
 yew = {version="0.20", features=["csr"]}
