--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 web-sys = { version = "0.3.61", features = ["console"] }
 yew = {version="0.20", features=["csr"]}
+yew-router = "0.17.0"
