--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+gloo-utils = "0.2.0"
 web-sys = { version = "0.3.61", features = ["console"] }
 yew = {version="0.20", features=["csr"]}
 yew-router = "0.17.0"
+yew-utils = "0.3.0"
